--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,8 +1,10 @@
-@import "./components/footer";
-@import "./components/header";
-@import "./components/studio";
-@import "./basic/basic";
-@import "./port/basic/portb";
-@import "./port/components/portf";
-@import "./port/components/porth";
-@import "./port/components/portm";
+@import "./studio/basic/basic";
+@import "./studio/components/header";
+@import "./studio/components/studio";
+@import "./studio/components/hero";
+@import "./studio/components/features";
+@import "./studio/components/modal";
+@import "./studio/components/works";
+@import "./studio/components/team";
+@import "./studio/components/customers";
+@import "./studio/components/footer";
