--- a/css/main.css
+++ b/css/main.css
@@ -208,7 +208,7 @@ li {
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: #2F303A;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/font/new_photo.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/WebStudio/font/new_photo.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
