--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,10 +1,9 @@
-@import "./studio/basic/basic";
-@import "./studio/components/header";
-@import "./studio/components/studio";
-@import "./studio/components/hero";
-@import "./studio/components/features";
-@import "./studio/components/modal";
-@import "./studio/components/works";
-@import "./studio/components/team";
-@import "./studio/components/customers";
-@import "./studio/components/footer";
+@import "./base/base";
+@import "./components/studio/header";
+@import "./components/studio/hero";
+@import "./components/studio/modal";
+@import "./components/studio/features";
+@import "./components/studio/works";
+@import "./components/studio/team";
+@import "./components/studio/customers";
+@import "./components/studio/footer";
