--- a/SASS/portfolio.scss
+++ b/SASS/portfolio.scss
@@ -1,5 +1,5 @@
-@import "./portfolio/basic/basic";
-@import "./studio/components/header";
-@import "./portfolio/component/button";
-@import "./portfolio/component/business";
-@import "./studio/components/footer";
+@import "./base/base";
+@import "./components/studio/header";
+@import "./component/portfolio/button";
+@import "./component/portfolio/business";
+@import "./components/studio/footer";
