--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,3 +1,6 @@
+@import "./utils/variables";
+@import "./utils/mixin";
+@import "./utils/placeholder";
 @import "./base/base";
 @import "./components/studio/header";
 @import "./components/studio/hero";
