--- a/SASS/components/portfolio/_business.scss
+++ b/SASS/components/portfolio/_business.scss
@@ -1,22 +1,56 @@
 .overlay:hover{
 width: 100%;
 height: 100%;
- background-color: rgba(33, 150, 243, 0.90);
+ background-color: rgba(33, 150, 243, 0.9);
  position: absolute;
 top: 0;
 cursor: pointer;
 transition: background-color 1s ease;
 }
-.overlay:hover .portfolio-hover-text{
-  opacity: 1;
+.main-wrapper{
+  width: 1200px;
+  margin: 0 auto;
+  background-color:  getColor('background');
 }
-.div-over:hover .overlay{
+.projects{
+  width: 1200px;
+}
+.projects li{
+  list-style-type: none;
+}
+.projects div{
+  box-sizing: border-box;
+background:  getColor('background');
+border: 1px solid #EEEEEE;
+}
+.works-list{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 56px auto 94px auto;
+  &__div{
+  margin-bottom: 30px;
+}
+&__div:hover .overlay{
   cursor: pointer;
   opacity: 1;
 }
-.portfolio-hover-text{
-  color: #FFF;
-font-family: Roboto;
+.overlay:hover &__text{
+  opacity: 1;
+}
+&__name{
+  font-weight: 700;
+font-size: 18px;
+line-height: 36px;
+letter-spacing: 0.06em;
+width: 322px;
+height: 36px;
+margin: 20px 24px 4px 24px;
+color:  getColor('text');
+}
+&__text{
+  color:  getColor('color');
+font-family: getFont('basic');
 font-size: 18px;
 font-style: normal;
 font-weight: 400;
@@ -29,60 +63,26 @@ bottom: 63px;
 left: 24px;
 right: 24px;
 }
-.thumb-p{
+&__type{
+font-weight: 400;
+font-size: 16px;
+line-height: 30px;
+letter-spacing: 0.03em;
+margin: 4px 24px 20px 24px;
+color: getColor('svg');
+}
+&__thumb{
   position: relative;
 }
-.main-wrapper{
-  width: 1200px;
-  margin: 0 auto;
-  background-color: #ffffff;
-}
-.thumb-p{
+&__thumb{
   width: 370px;
   height: 294px;
 }
-.thumb-p > img{
+&__thumb > img{
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
 }
-.projects li{
-  list-style-type: none;
-}
-.projects div{
-  box-sizing: border-box;
-background: #FFFFFF;
-border: 1px solid #EEEEEE;
-}
-.works{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 56px auto 94px auto;
-}
-.projects{
-  width: 1200px;
-}
-.div-to-6{
-  margin-bottom: 30px;
-}
-.title{
-  font-weight: 700;
-font-size: 18px;
-line-height: 36px;
-letter-spacing: 0.06em;
-width: 322px;
-height: 36px;
-margin: 20px 24px 4px 24px;
-color: #212121;
-}
-.program-type{
-font-weight: 400;
-font-size: 16px;
-line-height: 30px;
-letter-spacing: 0.03em;
-margin: 4px 24px 20px 24px;
-color: #757575;
 }
