--- a/SASS/components/portfolio/_button.scss
+++ b/SASS/components/portfolio/_button.scss
@@ -1,4 +1,4 @@
-.btn-s {
+.buttons-list {
   width: 575px;
   margin: 94px 298px 34px 297px;
   padding-right: 8px;
@@ -7,52 +7,38 @@ font-size: 16px;
 line-height: 26px;
 text-align: center;
 letter-spacing: 0.03em;
-color: #212121;
-}
-.btn-s button:hover{
-  background-color: #2196f3;
-  color:#FFFFFF;
+color:  getColor('text');
+& button:hover{
+  background-color:  getColor('hover');
+  color: getColor('background');
   transition: background-color 1s ease;
   cursor: pointer;
 }
-.btn-s button:focus{
-  background-color: #2196f3;
-  color: #FFFFFF;
+& button:focus{
+  background-color:  getColor('hover');
+  color:  getColor('background');
   transition: background-color 1s ease;
   cursor: pointer;
 }
-.btn-1 {
-  width: 73px;
+&__item {
   border: none;
   height: 38px;
   border-radius: 4px;
-  background: #f5f4fa;
+  background:  getColor('third-background');
 }
-.btn-2 {
-  width: 125px;
-  border: none;
-  height: 38px;
-  border-radius: 4px;
-  background: #f5f4fa;
+&__item:nth-child(1){
+width: 73px;
 }
-.btn-3 {
+&__item:nth-child(2){
+width: 125px;
+}
+&__item:nth-child(3){
   width: 112px;
-height: 38px;
-border: none;
-border-radius: 4px;
-  background: #f5f4fa;
 }
-.btn-4{
+&__item:nth-child(4){
   width: 103px;
-height: 38px;
-border: none;
-border-radius: 4px;
-  background: #f5f4fa;
 }
-.btn-5{
+&__item:nth-child(5){
   width: 130px;
-height: 38px;
-border: none;
-border-radius: 4px;
-  background: #f5f4fa;
+}
 }
