--- a/SASS/components/studio/_customers.scss
+++ b/SASS/components/studio/_customers.scss
@@ -1,50 +1,50 @@
-.regular-customers{
+.customers{
   padding-top: 94px;
   padding-bottom: 94px;
-}
-.customers{
-  display: flex;
-  justify-content: space-between;
-  margin-left: 215px;
-  width: 1200px;
-}
-.logo{
-  width: 106px;
-height: 60px;
-}
-.customers-list-item{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 170px;
-  height: 92px;
-  border-radius: 4px;
-border: 1px solid #AFB1B8;
-}
-.customers-list-item:hover .logo{
-  fill: #2196F3;
-  transition: fill 750ms ease-in;
-}
-.customers-list-item:hover{
-  border: 1px solid #2196F3;
-    transition: border 750ms ease-in;
-}
-.customers-list-item:focus .logo{
-  fill: #2196F3;
-  transition: fill 750ms ease-in;
-}
-.customers-list-item:focus{
-  border: 1px solid #2196F3;
-    transition: border 750ms ease-in;
-}
-.customers-title{
-  color: #212121;
+  &__title{
+  color: getColor('text');
 text-align: center;
 font-size: 36px;
 font-weight: 700;
 margin-bottom: 50px;
 letter-spacing: 1.08px;
 }
-.logo{
-  fill:rgba(175, 177, 184, 1);
+}
+.customers-list{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 215px;
+  width: 1200px;
+  &__item{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  border-radius: 4px;
+border: 1px solid getColor('border');
+}
+&__item:hover &__svg{
+  fill: getColor('hover');
+  transition: fill 500ms ease-in;
+}
+&__item:hover{
+  border: 1px solid getColor('hover');
+    transition: border 500ms ease-in;
+}
+&__item:focus &__svg{
+  fill: getColor('hover');
+  transition: fill 500ms ease-in;
+}
+&__item:focus{
+  border: 1px solid getColor('hover');
+    transition: border 500ms ease-in;
+}
+&__svg{
+  width: 106px;
+height: 60px;
+}
+&__svg{
+  fill: getColor('border-secondary');
+}
 }
