--- a/SASS/components/studio/_hero.scss
+++ b/SASS/components/studio/_hero.scss
@@ -2,29 +2,25 @@
   width: 1600px;
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color:#2F303A;
+  background-color: getColor('fourth-background');
   background-image:linear-gradient(to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),url("/WebStudio/font/new_photo.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-.hero h1{
-  text-align: center;
-}
-.hero-title {
+  &__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #ffffff;
+  color:  getColor('background');
 }
-.hero-btn {
+&__btn {
   width: 216px;
   height: 50px;
   margin: 0 auto;
-  background: #2196f3;
+  background-color: getColor('hover');
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-weight: 700;
@@ -33,5 +29,6 @@
   display: block;
   text-align: center;
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color:  getColor('background');
+}
 }
