--- a/SASS/components/studio/_modal.scss
+++ b/SASS/components/studio/_modal.scss
@@ -16,62 +16,15 @@
     border-radius: 4px;
     z-index: 100;
     border-radius: 4px;
-background: #FFF;
+background:  getColor('color');
 box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-}
-.modal-input{
-    margin-top: 4px;
-    margin-bottom: 10px;
-    width: 448px;
-height: 40px;
-border-radius: 4px;
-border: 1px solid rgba(33, 33, 33, 0.20);
-outline: none;
-padding: 12px 0 12px 42px;
-cursor: pointer;
-}
-.modal-input:hover, .modal-input:focus{
-  border-radius: 4px;
-border: 1px solid #2196F3;
-}
-.modal-icon:hover, .modal-icon:focus{
-  fill: #2196F3;
-  transition: fill 250ms ease;
-}
-.modal-input:focus + .modal-icon{
-  fill: #2196F3;
-    transition: fill 250ms ease;
-}
-.modal-input:hover + .modal-icon{
-  fill: #2196F3;
-    transition: fill 250ms ease;
-}
-.modal-title{
-    color: #212121;
-text-align: center;
-font-size: 20px;
-font-weight: 700;
-line-height: normal;
-letter-spacing: 0.6px;
-margin-bottom: 12px;
-}
-.modal-label{
-    display: flex;
-    flex-direction: column;
-    color: #757575;
-font-size: 12px;
-font-weight: 400;
-line-height: normal;
-letter-spacing: 0.12px;
-  position: relative;
-}
-.btn-submit{
+&__btn-submit{
   width: 200px;
 height: 50px;
 border-radius: 4px;
-background: #2196F3;
+background:  getColor('hover');
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-color: #FFF;
+color:  getColor('background');
 text-align: center;
 font-size: 16px;
 font-weight: 700;
@@ -80,27 +33,88 @@ letter-spacing: 0.96px;
 border: none;
 margin: 30px 124px 0 124px;
 }
-textarea{
-  resize: none;
-  margin-top: 4px;
-  border-radius: 4px;
-  border: 1px solid rgba(33, 33, 33, 0.20);
-padding: 12px 16px;
+&__text{
+  margin-top: 20px;
 }
-.modal-textarea::placeholder{
-  color: rgba(117, 117, 117, 0.50);
+&-link{
+  color:   getColor('hover');
+}
+&__title{
+    color:  getColor('text');
+text-align: center;
+font-size: 20px;
+font-weight: 700;
+line-height: normal;
+letter-spacing: 0.6px;
+margin-bottom: 12px;
+}
+&__checkbox{
+  width: 16px;
+  height: 15px;
+  margin-left: 12px;
+  margin-right: 5px;
+}
+}
+.modal-list{
+&__input{
+    margin-top: 4px;
+    margin-bottom: 10px;
+    width: 448px;
+height: 40px;
+border-radius: 4px;
+border: 1px solid  getColor('border-modal');
+outline: none;
+padding: 12px 0 12px 42px;
+cursor: pointer;
+}
+&__input:hover, &__input:focus{
+  border-radius: 4px;
+border: 1px solid  getColor('hover');
+}
+&__icon:hover, &__icon:focus{
+  fill:  getColor('hover');
+  transition: fill 250ms ease;
+}
+&__input:focus + &__icon{
+  fill:  getColor('hover');
+    transition: fill 250ms ease;
+}
+&__input:hover + &__icon{
+  fill:  getColor('hover');
+    transition: fill 250ms ease;
+}
+&__label{
+    display: flex;
+    flex-direction: column;
+    color:  getColor('svg');
 font-size: 12px;
 font-weight: 400;
 line-height: normal;
 letter-spacing: 0.12px;
-} 
-.modal-icon{
+  position: relative;
+}
+&__icon{
   width: 18px;
   height: 18px;
   position: absolute;
   top: 29px;
   left: 12px;
   cursor: pointer;
+}
+&__textarea::placeholder{
+  color: rgba(117, 117, 117, 0.50);
+font-size: 12px;
+font-weight: 400;
+line-height: normal;
+letter-spacing: 0.12px;
+} 
+&__textarea{
+  resize: none;
+  margin-top: 4px;
+  border-radius: 4px;
+  border: 1px solid  getColor('border-modal');
+padding: 12px 16px;
+}
 }
 .is-hidden{
 opacity: 0;
@@ -118,27 +132,15 @@ pointer-events: none;
   align-items: center;
   border-radius: 50%;
 border-color: rgba(0, 0, 0, 0.10);
-background-color: #FFF;
+background-color:  getColor('color');
 cursor: pointer;
-}
-.icon-close-modal{
-  fill: #212121;
+&__icon{
+  fill:  getColor('text');
   width: 18px;
   height: 18px;
 }
-.icon-close-modal:hover, .icon-close-modal:focus{
-  fill: rgba(33, 150, 243, 1);
+&__icon:hover, &__icon:focus{
+  fill:  getColor('hover');
     transition: fill 250ms ease;
 }
-.modal-text{
-  margin-top: 20px;
-}
-.checkbox{
-  width: 16px;
-  height: 15px;
-  margin-left: 12px;
-  margin-right: 5px;
-}
-.modal-href{
-  color:  #2196F3;
 }
