--- a/SASS/portfolio.scss
+++ b/SASS/portfolio.scss
@@ -1,3 +1,6 @@
+@import "./utils/mixin";
+@import "./utils/placeholder";
+@import "./utils/variables";
 @import "./base/base";
 @import "./components/studio/header";
 @import "./components/portfolio/button";
