--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -37,10 +37,6 @@ a {
   text-decoration: none;
 }
 
-.header {
-  width: 1600px;
-}
-
 .header-wrapper {
   width: 1200px;
   height: 80px;
@@ -49,24 +45,21 @@ a {
   justify-content: space-between;
   align-items: center;
 }
-
-.nav-menu {
+.header-wrapper__left {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 520px;
 }
-
-.contacts {
+.header-wrapper__right {
   display: flex;
   width: 333px;
   justify-content: space-between;
   align-items: center;
 }
-
-.icon-contact {
-  margin-right: 10px;
-  fill: rgb(117, 117, 117);
+.header-wrapper a:focus {
+  color: #2196f3;
+  transition: color 250ms ease-in;
 }
 
 .logo-link {
@@ -78,8 +71,7 @@ a {
   color: #212121;
   text-decoration: none;
 }
-
-.web {
+.logo-link__web {
   color: #2196f3;
   padding-top: 24px;
 }
@@ -93,45 +85,17 @@ a {
   line-height: 1.15;
   letter-spacing: 0.02em;
 }
-
-.nav-list-item {
+.nav-list__item {
   position: relative;
 }
-
-.nav-list a {
+.nav-list__link {
   text-decoration: none;
   color: #212121;
 }
-
 .nav-list a:hover {
   color: #2196f3;
 }
-
-.contact {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.15;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-  color: #757575;
-}
-
-.contact:hover .icon-contact, .contact:focus .icon-contact {
-  fill: #2196F3;
-  transition: fill 250ms ease-in;
-}
-
-.contact:hover {
-  color: #2196f3;
-  transition: color 250ms ease-in;
-}
-
-.header-wrapper a:focus {
-  color: #2196f3;
-  transition: color 250ms ease-in;
-}
-
-.nav-list-item::after {
+.nav-list__item::after {
   position: absolute;
   top: 44px;
   left: 0;
@@ -139,18 +103,38 @@ a {
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: #2196F3;
+  background-color: #2196f3;
   transform: scaleX(0);
   transition: transform 0.5s;
   transform-origin: right;
 }
-
-.nav-list-item:hover::after {
+.nav-list__item:hover::after {
   transform: scaleX(1);
   transform-origin: left;
 }
 
-.btn-s {
+.header-wrapper__contact-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.15;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: #757575;
+}
+.header-wrapper__contact-link .contact__icon {
+  margin-right: 10px;
+  fill: rgb(117, 117, 117);
+}
+.header-wrapper__contact-link:hover .contact__icon, .header-wrapper__contact-link:focus .contact__icon {
+  fill: #2196f3;
+  transition: fill 250ms ease-in;
+}
+.header-wrapper__contact-link:hover {
+  color: #2196f3;
+  transition: color 250ms ease-in;
+}
+
+.buttons-list {
   width: 575px;
   margin: 94px 298px 34px 297px;
   padding-right: 8px;
@@ -161,59 +145,38 @@ a {
   letter-spacing: 0.03em;
   color: #212121;
 }
-
-.btn-s button:hover {
+.buttons-list button:hover {
   background-color: #2196f3;
-  color: #FFFFFF;
+  color: #ffffff;
   transition: background-color 1s ease;
   cursor: pointer;
 }
-
-.btn-s button:focus {
+.buttons-list button:focus {
   background-color: #2196f3;
-  color: #FFFFFF;
+  color: #ffffff;
   transition: background-color 1s ease;
   cursor: pointer;
 }
-
-.btn-1 {
+.buttons-list__item {
+  border: none;
+  height: 38px;
+  border-radius: 4px;
+  background: #F5F4FA;
+}
+.buttons-list__item:nth-child(1) {
   width: 73px;
-  border: none;
-  height: 38px;
-  border-radius: 4px;
-  background: #f5f4fa;
 }
-
-.btn-2 {
+.buttons-list__item:nth-child(2) {
   width: 125px;
-  border: none;
-  height: 38px;
-  border-radius: 4px;
-  background: #f5f4fa;
 }
-
-.btn-3 {
+.buttons-list__item:nth-child(3) {
   width: 112px;
-  height: 38px;
-  border: none;
-  border-radius: 4px;
-  background: #f5f4fa;
 }
-
-.btn-4 {
+.buttons-list__item:nth-child(4) {
   width: 103px;
-  height: 38px;
-  border: none;
-  border-radius: 4px;
-  background: #f5f4fa;
 }
-
-.btn-5 {
+.buttons-list__item:nth-child(5) {
   width: 130px;
-  height: 38px;
-  border: none;
-  border-radius: 4px;
-  background: #f5f4fa;
 }
 
 .overlay:hover {
@@ -226,18 +189,55 @@ a {
   transition: background-color 1s ease;
 }
 
-.overlay:hover .portfolio-hover-text {
-  opacity: 1;
+.main-wrapper {
+  width: 1200px;
+  margin: 0 auto;
+  background-color: #ffffff;
 }
 
-.div-over:hover .overlay {
+.projects {
+  width: 1200px;
+}
+
+.projects li {
+  list-style-type: none;
+}
+
+.projects div {
+  box-sizing: border-box;
+  background: #ffffff;
+  border: 1px solid #EEEEEE;
+}
+
+.works-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 56px auto 94px auto;
+}
+.works-list__div {
+  margin-bottom: 30px;
+}
+.works-list__div:hover .overlay {
   cursor: pointer;
   opacity: 1;
 }
-
-.portfolio-hover-text {
+.overlay:hover .works-list__text {
+  opacity: 1;
+}
+.works-list__name {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 36px;
+  letter-spacing: 0.06em;
+  width: 322px;
+  height: 36px;
+  margin: 20px 24px 4px 24px;
+  color: #212121;
+}
+.works-list__text {
   color: #FFF;
-  font-family: Roboto;
+  font-family: "Roboto";
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -250,23 +250,22 @@ a {
   left: 24px;
   right: 24px;
 }
-
-.thumb-p {
+.works-list__type {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.03em;
+  margin: 4px 24px 20px 24px;
+  color: #757575;
+}
+.works-list__thumb {
   position: relative;
 }
-
-.main-wrapper {
-  width: 1200px;
-  margin: 0 auto;
-  background-color: #ffffff;
-}
-
-.thumb-p {
+.works-list__thumb {
   width: 370px;
   height: 294px;
 }
-
-.thumb-p > img {
+.works-list__thumb > img {
   display: block;
   width: 100%;
   height: 100%;
@@ -276,76 +275,45 @@ a {
      object-position: center;
 }
 
-.projects li {
-  list-style-type: none;
-}
-
-.projects div {
-  box-sizing: border-box;
-  background: #FFFFFF;
-  border: 1px solid #EEEEEE;
-}
-
-.works {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin: 56px auto 94px auto;
-}
-
-.projects {
-  width: 1200px;
-}
-
-.div-to-6 {
-  margin-bottom: 30px;
-}
-
-.title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 36px;
-  letter-spacing: 0.06em;
-  width: 322px;
-  height: 36px;
-  margin: 20px 24px 4px 24px;
-  color: #212121;
-}
-
-.program-type {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 30px;
-  letter-spacing: 0.03em;
-  margin: 4px 24px 20px 24px;
-  color: #757575;
-}
-
 .footer {
   width: 1600px;
   height: 252px;
-  background-color: #2f303a;
+  background-color: #2F303A;
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
-.logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  text-decoration: none;
+.footer-wrapper {
+  display: flex;
+  width: 1200px;
+  margin: 0 auto;
 }
-
-.address-footer {
+.footer-wrapper__left {
   display: flex;
   flex-direction: column;
   width: 231px;
 }
-
-.street {
+.footer-wrapper h2 {
+  color: #FFF;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 0.42px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+}
+.footer-wrapper__left a:hover {
+  color: #2196f3;
+  transition: color 500ms ease-out;
+}
+.footer-wrapper__left a:focus {
+  color: #2196f3;
+  transition: color 500ms ease-out;
+}
+.footer-wrapper a:focus {
+  color: #2196f3;
+  transition: color 500ms ease-out;
+}
+.footer-wrapper__street {
   margin-top: 20px;
   font-weight: 400;
   font-size: 14px;
@@ -355,84 +323,28 @@ a {
   color: #ffffff;
 }
 
-.tel-item {
-  margin-top: 9px;
+.logo__link {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  text-decoration: none;
 }
 
-.footer-wrapper {
-  display: flex;
-  width: 1200px;
-  margin: 0 auto;
-}
-
-.contact-footer {
+.footer-contact-list {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.15;
   letter-spacing: 0.02em;
 }
-
-.contact-footer a {
+.footer-contact-list a {
   text-decoration: none;
-  color: #757575;
+  color: #AFB1B8;
 }
-
-.address-footer a:hover {
-  color: #2196f3;
-  transition: color 500ms ease-out;
-}
-
-.address-footer a:focus {
-  color: #2196f3;
-  transition: color 500ms ease-out;
-}
-
-.footer-wrapper a:focus {
-  color: #2196f3;
-  transition: color 500ms ease-out;
-}
-
-.link-footer {
-  width: 20px;
-  height: 20px;
-  fill: #ffffff;
-}
-
-.links-footer {
-  display: flex;
-  justify-content: space-between;
-  width: 206px;
-}
-
-.link-li-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
-.link-li-footer:hover {
-  border-radius: 50%;
-  background-color: #2196F3;
-  transition: background-color 1s ease;
-}
-
-.link-li-footer:focus {
-  border-radius: 50%;
-  background-color: #2196F3;
-  transition: background-color 1s ease;
-}
-
-.footer-wrapper h2 {
-  color: #FFF;
-  font-size: 14px;
-  font-weight: 700;
-  letter-spacing: 0.42px;
-  margin-bottom: 20px;
-  text-transform: uppercase;
+.footer-contact-list__item {
+  margin-top: 9px;
 }
 
 .join {
@@ -442,53 +354,34 @@ a {
   padding-top: 12px;
 }
 
-.telegram-icon {
-  width: 24px;
-  height: 24px;
+.footer-links-list {
+  display: flex;
+  justify-content: space-between;
+  width: 206px;
+}
+.footer-links-list__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.footer-links-list__item:hover {
+  border-radius: 50%;
+  background-color: #2196f3;
+  transition: background-color 1s ease;
+}
+.footer-links-list__item:focus {
+  border-radius: 50%;
+  background-color: #2196f3;
+  transition: background-color 1s ease;
+}
+.footer-links-list__svg {
+  width: 20px;
+  height: 20px;
   fill: #ffffff;
-}
-
-.telegram-btn {
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  background: #2196F3;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  border: none;
-  color: #FFF;
-  text-align: center;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 30px;
-  letter-spacing: 0.96px;
-  position: absolute;
-  left: 370px;
-  animation: back 5s linear 500ms infinite;
-}
-
-.footer-input {
-  width: 358px;
-  height: 50px;
-  border-radius: 4px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  background: rgba(33, 150, 243, 0);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  padding-left: 16px;
-  outline: none;
-  color: #FFF;
-  cursor: pointer;
-  margin-top: 20px;
-  margin-right: 12px;
-}
-
-.footer-label {
-  color: #FFF;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: normal;
-  letter-spacing: 0.42px;
-  text-transform: uppercase;
 }
 
 .telegram {
@@ -502,13 +395,64 @@ a {
   position: relative;
   left: 93px;
 }
+.footer-form__input {
+  width: 358px;
+  height: 50px;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(33, 150, 243, 0);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  padding-left: 16px;
+  outline: none;
+  color: #FFF;
+  cursor: pointer;
+  margin-top: 20px;
+  margin-right: 12px;
+}
+.footer-form__label {
+  color: #FFF;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+}
+.footer-form__icon {
+  width: 24px;
+  height: 24px;
+  fill: #ffffff;
+}
+.footer-form__btn {
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  border: none;
+  color: #FFF;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px;
+  letter-spacing: 0.96px;
+  position: absolute;
+  left: 370px;
+  animation: back 10s linear 500ms infinite;
+}
 
 @keyframes back {
   0% {
     background-color: red;
   }
+  25% {
+    background-color: green;
+  }
   50% {
     background-color: black;
+  }
+  75% {
+    background-color: purple;
   }
   100% {
     background-color: #2196F3;
